objects/LLC_BI__Deposit__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. This field is a picklist used to specify the status that the deposit is in.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Superseded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Step_Interest_Rate__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the interest rate that applies to the corresponding step.</description>
        <inlineHelpText>The interest rate that applies to the corresponding step.</inlineHelpText>
        <label>Step Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Step_Rate_Period_Type__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies the period of time the corresponding step rate applies.</description>
        <inlineHelpText>Specifies the period of time the corresponding step rate will apply.</inlineHelpText>
        <label>Step Rate Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day(s)</fullName>
                </value>
                <value>
                    <fullName>Month(s)</fullName>
                </value>
                <value>
                    <fullName>Week(s)</fullName>
                </value>
                <value>
                    <fullName>Year(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Step_Rate_Period__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the number of periods that the corresponding stepped rate applies.</description>
        <inlineHelpText>The number of periods that the corresponding stepped rate will apply.</inlineHelpText>
        <label>Step Rate Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Tax_Year_of_First_Roth_Contribution__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the tax year of first Roth IRA contribution or conversion.</description>
        <inlineHelpText>The tax year of first Roth IRA contribution or conversion.</inlineHelpText>
        <label>Tax Year of First Roth Contribution</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Term_Type__c</fullName>
        <description>This picklist field is required for CD&apos;s and is manually populated. The picklist values are the time periods used to describe the length of a certificate term. It is used in conjunction with the number field that specifies the number of terms.</description>
        <label>Term Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>day(s)</fullName>
                </value>
                <value>
                    <fullName>month(s)</fullName>
                </value>
                <value>
                    <fullName>quarter(s)</fullName>
                </value>
                <value>
                    <fullName>year(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Tiered_Interest_Rate__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the interest rate that applies to the corresponding tier.</description>
        <inlineHelpText>The interest rate that applies to the corresponding tier.</inlineHelpText>
        <label>Tiered Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Tiered_Margin_Percent__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the percentage that is added to (or subtracted from) the index to determine the applicable rate for a given account tier with variable rate tiers.</description>
        <inlineHelpText>The percentage that is added to (or subtracted from) the index to determine the applicable rate for a given account tier with variable rate tiers.</inlineHelpText>
        <label>Tiered Margin Percent</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Vault_Key_Description__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It describes any vault keys that have been issued for the safe deposit box.</description>
        <inlineHelpText>A description of any vault keys that have been issued for the safe deposit box.</inlineHelpText>
        <label>Vault Key Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__isConvert__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is a hidden field used for reporting purposes, such as number of deposits converted from a lead.</description>
        <label>isConvert</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>This manually populated field is an external, unique key. This field is used to link the deposit in nCino to the deposit in the financial institution’s Core.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Deposit</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Deposit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deposits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>